--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -239,7 +239,7 @@
     function _render() {
         var lang = getLang()
         // en
-        if (lang == "en") {
+        if (lang !== "zh") {
             $select.selectedIndex = 0;
             $en.style.display = "block";
             $en.classList.add("active");
