--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,6 +65,16 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9818W93TPM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9818W93TPM');
+    </script>
 
     <!-- Google AdSense -->
     <script data-ad-client="ca-pub-6487568398225121" async
