--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -115,9 +115,9 @@
 </script>
 
 
-#<!-- Google Analytics -->
-#{% if site.ga_track_id %}
-#<script>
+<!-- Google Analytics -->
+{% if site.ga_track_id %}
+<script>
 #    // dynamic User by Hux
 #    var _gaId = '{{ site.ga_track_id }}';
 #    var _gaDomain = '{{ site.ga_domain }}';
@@ -132,8 +132,8 @@
 
 #    ga('create', _gaId, _gaDomain);
 #    ga('send', 'pageview');
-#</script>
-#{% endif %}
+</script>
+{% endif %}
 
 
 
